--- a/includes/radarr.yml
+++ b/includes/radarr.yml
@@ -260,6 +260,8 @@ custom_formats:
   - trash_ids:
       - a3e19f8f627608af0211acd02bf89735 # DV SDR
       - 9c38ebb7384dada637be8899efa68e6f # SDR
+      - 9364dd386c9b4a1100dde8264690add7 # HLG
+      - 08d6d8834ad9ec87b1dc7ec8148e7a1f # PQ
     assign_scores_to:
       - name: Maximum 4K/HDR
         score: -10000
