--- a/includes/sonarr.yml
+++ b/includes/sonarr.yml
@@ -14,7 +14,7 @@ quality_profiles:
       allowed: yes
       until_quality: Bluray-2160p Remux
       until_score: 10000
-    min_format_score: 0
+    min_format_score: 3000 # Adjust according to your preferences
     score_set: sqp-2-2160p
     qualities:
       - name: Bluray-2160p Remux
@@ -31,7 +31,7 @@ quality_profiles:
       allowed: yes
       until_quality: Bluray-2160p Remux
       until_score: 10000
-    min_format_score: 0
+    min_format_score: 1200 # Adjust according to your preferences
     score_set: sqp-2-2160p
     qualities:
       - name: Bluray-2160p Remux
@@ -48,7 +48,7 @@ quality_profiles:
       allowed: yes
       until_quality: Bluray-1080p Remux
       until_score: 10000
-    min_format_score: 0
+    min_format_score: 1200 # Adjust according to your preferences
     score_set: sqp-2-1080p
     qualities:
       - name: Bluray-1080p Remux
