--- a/includes/sonarr.yml
+++ b/includes/sonarr.yml
@@ -175,6 +175,8 @@ custom_formats:
     assign_scores_to:
       - name: Maximum 4K/HDR
         score: 1830
+      - name: Maximum 1080p
+        score: 500
 
   - trash_ids:
       # Prefer DV + HDR
@@ -182,6 +184,8 @@ custom_formats:
     assign_scores_to:
       - name: Maximum 4K/HDR
         score: 1800
+      - name: Maximum 1080p
+        score: 400
 
   - trash_ids:
       # Prefer DV
@@ -190,6 +194,8 @@ custom_formats:
     assign_scores_to:
       - name: Maximum 4K/HDR
         score: 1700
+      - name: Maximum 1080p
+        score: 300
 
   - trash_ids:
       # HDR Formats
@@ -201,6 +207,8 @@ custom_formats:
     assign_scores_to:
       - name: Maximum 4K/HDR
         score: 1500
+      - name: Maximum 1080p
+        score: 200
         
 
   # Repack / Proper
@@ -214,6 +222,110 @@ custom_formats:
       - name: Maximum 1080p
       - name: Anime
 
+
+  # Audio
+
+ # Audio
+
+  - trash_ids:
+      - 0d7824bb924701997f874e7ff7d4844a # TrueHD ATMOS
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 500
+      - name: Maximum 4K/SDR
+        score: 500
+      - name: Maximum 1080p
+        score: 500
+
+  - trash_ids:
+      - 1808e4b9cee74e064dfae3f1db99dbfe # TrueHD
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 450
+      - name: Maximum 4K/SDR
+        score: 450
+      - name: Maximum 1080p
+        score: 450
+
+  - trash_ids:
+      - c429417a57ea8c41d57e6990a8b0033f # DTS-HD MA
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 440
+      - name: Maximum 4K/SDR
+        score: 440
+      - name: Maximum 1080p
+        score: 440
+
+  - trash_ids:
+      - 4232a509ce60c4e208d13825b7c06264 # DD+ ATMOS
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 400
+      - name: Maximum 4K/SDR
+        score: 400        
+      - name: Maximum 1080p
+        score: 400
+
+  - trash_ids:
+      - 5964f2a8b3be407d083498e4459d05d0 # DTS X
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 300
+      - name: Maximum 4K/SDR
+        score: 300
+      - name: Maximum 1080p
+        score: 300
+
+  - trash_ids:
+      - b6fbafa7942952a13e17e2b1152b539a # ATMOS (undefined)
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 200
+      - name: Maximum 4K/SDR
+        score: 200
+      - name: Maximum 1080p
+        score: 200
+
+  - trash_ids:
+      - 63487786a8b01b7f20dd2bc90dd4a477 # DD+
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 150
+      - name: Maximum 4K/SDR
+        score: 150
+      - name: Maximum 1080p
+        score: 150
+
+  - trash_ids:
+      - c1a25cd67b5d2e08287c957b1eb903ec # DTS-ES
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 100
+      - name: Maximum 4K/SDR
+        score: 100
+      - name: Maximum 1080p
+        score: 100
+
+  - trash_ids:
+      - 5964f2a8b3be407d083498e4459d05d0 # DTS
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 125
+      - name: Maximum 4K/SDR
+        score: 125
+      - name: Maximum 1080p
+        score: 125
+
+  - trash_ids:
+      - dbe00161b08a25ac6154c55f95e6318d # DD
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+        score: 90
+      - name: Maximum 4K/SDR
+        score: 90
+      - name: Maximum 1080p
+        score: 90
 
   # Scores from TRaSH json
 
