Removed Remux Tier from Optimized 4K Profile

--- a/includes/radarr.yml
+++ b/includes/radarr.yml
@@ -230,6 +230,12 @@ custom_formats:
       - 3a3ff47579026e76d6504ebea39390de # Remux Tier 01
       - 9f98181fe5a3fbeb0cc29340da2a468a # Remux Tier 02
       - 8baaf0b3142bf4d94c42a724f034e27a # Remux Tier 03
+    assign_scores_to:
+      - name: Maximum 4K/HDR
+      - name: Maximum 4K/SDR
+      - name: Maximum 1080p
+
+  - trash_ids:
       - c20f169ef63c5f40c2def54abaf4438e # WEB Tier 01
       - 403816d65392c79236dcb6dd591aeda4 # WEB Tier 02
       - af94e0fe497124d1f9ce732069ec8c3b # WEB Tier 03
@@ -238,6 +244,7 @@ custom_formats:
       - name: Maximum 4K/SDR
       - name: Maximum 1080p
       - name: Optimized 4k
+
 
   - trash_ids:
       - 4d74ac4c4db0b64bff6ce0cffef99bf0 # UHD Bluray Tier 01
