Added HDTV-1080p to Optimized 1080p profile

--- a/includes/radarr.yml
+++ b/includes/radarr.yml
@@ -96,6 +96,8 @@ quality_profiles:
         enabled: false
       - name: Bluray-1080p
         enabled: true
+      - name: HDTV-1080p
+        enabled: true
       - name: Web 1080p
         enabled: true
         qualities:
