--- a/includes/radarr.yml
+++ b/includes/radarr.yml
@@ -330,6 +330,14 @@ custom_formats:
     assign_scores_to:
       - name: Maximum 1080p
 
+  - trash_ids:
+      - ed27ebfef2f323e964fb1f61391bcb35 # HD Bluray Tier 01
+      - c20c8647f2746a1f4c4262b0fbbeeeae # HD Bluray Tier 02
+      - 5608c71bcebba0a5e666223bae8c9227 # HD Bluray Tier 03
+    assign_scores_to:
+      - name: Optimized 1080p
+        score: -10000
+
 
   # Repack / Proper
   - trash_ids:
