--- a/includes/custom_formats/sonarr_all_cf.yml
+++ b/includes/custom_formats/sonarr_all_cf.yml
@@ -8,6 +8,7 @@ custom_formats:
 #          - 6f808933a71bd9666531610cb8c059cc # BR-DISK (BTN)
 #          - 5d9fd1b1e06cd8a475462f40214b7df6 # FLUX
 #          - 4a20cfb76b5f92a8ca22b894b32e71be # Multi-Episode
+          - 133589380b89f8f8394320901529bac1 # Not German or English
 #          - e0c1a67f23908a55b6ae9834e8ed6727 # Single Episode
 
           # Anime Misc
@@ -143,6 +144,23 @@ custom_formats:
           - 1efe8da11bfd74fbbcd4d8117ddb9213 # STAN
           - 9623c5c9cac8e939c1b9aedd32f640bf # SYFY
 
+          # German Miscellaneous
+          - 9aa0ca0d2d66b6f6ee51fc630f46cf6f # German 1080p Booster
+          - b493cd40d8a3bbf2839127a706bdb673 # German 2160p Booster
+          - a6a6c33d057406aaad978a6902823c35 # German LQ
+          - 237eda4ef550a97da2c9d87b437e500b # German Microsized
+
+          # German Source Groups
+          - 7940b2fb0278f27cf4f70187f2be95d6 # German Bluray Tier 01
+          - 83b336a90d90d6b35ca673b007f80661 # German Bluray Tier 02
+          - d8f8e1539827967e0e564833e6c08d33 # German Bluray Tier 03
+          - da0f005f9c3edf34fc26e18dce8c6573 # German Remux Tier 01
+          - 6bc5ccd80a03e7abb8f556eecd174b73 # German Remux Tier 02
+          - c2eec878fa1989599c226ce4c287d6a7 # German Scene
+          - 68be37323132b35cf333c81a2ac8fc16 # German Web Tier 01
+          - f51b96a50b0e6196cb69724b7833d837 # German Web Tier 02
+          - bda67c2c0aae257308a4723d92475b86 # German Web Tier 03
+
           # HDR Formats
           - 6d0d8de7b57e35518ac0308b0ddf404e # DV
           - 7878c33f1963fefb3d6c8657d46c2f0a # DV HDR10
@@ -167,7 +185,9 @@ custom_formats:
           - d84935abd3f8556dcd51d4f27e22d0a6 # WEB Tier 03
 
           # Language profiles
+          - 8a9fcdbb445f2add0505926df3bb7b8a # German
 #          - ed51973a811f51985f14e2f6f290e47a # German DL
+          - c5dd0fd675f85487ad5bdf97159180bd # German DL (undefined)
           - 69aa1e159f97d860440b04cd6d590c4f # Language: Not English
 #          - 322fca6f8f3694acc1401ddb530fd33d # Language: Not French
           - ae575f95ab639ba5d15f663bf019e3e8 # Language: Not Original
