Removed "Not German or English" Custom Format

--- a/includes/custom_formats/sonarr_all_cf.yml
+++ b/includes/custom_formats/sonarr_all_cf.yml
@@ -8,7 +8,7 @@ custom_formats:
 #          - 6f808933a71bd9666531610cb8c059cc # BR-DISK (BTN)
 #          - 5d9fd1b1e06cd8a475462f40214b7df6 # FLUX
 #          - 4a20cfb76b5f92a8ca22b894b32e71be # Multi-Episode
-          - 133589380b89f8f8394320901529bac1 # Not German or English
+#          - 133589380b89f8f8394320901529bac1 # Not German or English
 #          - e0c1a67f23908a55b6ae9834e8ed6727 # Single Episode
 
           # Anime Misc
