--- a/includes/custom_formats/radarr_all_cf.yml
+++ b/includes/custom_formats/radarr_all_cf.yml
@@ -9,7 +9,7 @@ custom_formats:
 #          - e098247bc6652dd88c76644b275260ed # FLUX
 #          - ff5bc9e8ce91d46c997ca3ac6994d6f8 # FraMeSToR
 #          - 7a0d1ad358fee9f5b074af3ef3f9d9ef # hallowed
-          - 4eadb75fb23d09dfc0a8e3f687e72287 # Not German or English
+#          - 4eadb75fb23d09dfc0a8e3f687e72287 # Not German or English
 #          - 8cd3ac70db7ac318cf9a0e01333940a4 # SiC
 
           # Anime
