--- a/includes/sonarr.yml
+++ b/includes/sonarr.yml
@@ -105,10 +105,9 @@ custom_formats:
   
   # Unwanted HDR formats and SDR in 4K/HDR Profile
   - trash_ids:
-      - 17e889ce13117940092308f48b48b45b # HLG
-      - 2a7e3be05d3861d6df7171ec74cad727 # PQ
-      - 1f733af03141f068a540eec352589a89 # DV HLG
-      - 27954b0a80aab882522a88a4d9eae1cd # DV SDR
+      # - 2a7e3be05d3861d6df7171ec74cad727 # PQ
+      # - 1f733af03141f068a540eec352589a89 # DV HLG
+      # - 27954b0a80aab882522a88a4d9eae1cd # DV SDR
       - 2016d1676f5ee13a5b7257ff86ac9a93 # SDR
     assign_scores_to:
       - name: Maximum 4K/HDR
@@ -170,17 +169,8 @@ custom_formats:
       - name: Maximum 1080p
 
   - trash_ids:
-      # Prefer DV + HDR
-      - 2b239ed870daba8126a53bd5dc8dc1c8 # DV HDR10Plus
-    assign_scores_to:
-      - name: Maximum 4K/HDR
-        score: 1830
-      - name: Maximum 1080p
-        score: 500
-
-  - trash_ids:
-      # Prefer DV + HDR
-      - 7878c33f1963fefb3d6c8657d46c2f0a # DV HDR10
+      # Prefer All HDR
+       - 505d871304820ba7106b693be6fe4a9e # HDR
     assign_scores_to:
       - name: Maximum 4K/HDR
         score: 1800
@@ -188,9 +178,8 @@ custom_formats:
         score: 400
 
   - trash_ids:
-      # Prefer DV
-      - 6d0d8de7b57e35518ac0308b0ddf404e # DV
-
+      # Prefer HDR10Plus
+      - 0c4b99df9206d2cfac3c05ab897dd62a # HDR10Plus
     assign_scores_to:
       - name: Maximum 4K/HDR
         score: 1700
@@ -198,17 +187,14 @@ custom_formats:
         score: 300
 
   - trash_ids:
-      # HDR Formats
-      - bb019e1cd00f304f80971c965de064dc # HDR (undefined)
-      - 3e2c4e748b64a1a1118e0ea3f4cf6875 # HDR
-      - 3497799d29a085e2ac2df9d468413c94 # HDR10
-      - a3d82cbef5039f8d295478d28a887159 # HDR10+
+      # Prefer DV Boost
+       - 7c3a61a9c6cb04f52f1544be6d44a026 # DV Boost
 
     assign_scores_to:
       - name: Maximum 4K/HDR
-        score: 1500
+        score: 1830
       - name: Maximum 1080p
-        score: 200
+        score: 500
         
 
   # Repack / Proper
