--- a/includes/radarr.yml
+++ b/includes/radarr.yml
@@ -396,55 +396,46 @@ custom_formats:
         score: -10000
 
   - trash_ids:
-      - a3e19f8f627608af0211acd02bf89735 # DV SDR
+     # - a3e19f8f627608af0211acd02bf89735 # DV SDR
       - 9c38ebb7384dada637be8899efa68e6f # SDR
-      - 9364dd386c9b4a1100dde8264690add7 # HLG
-      - 08d6d8834ad9ec87b1dc7ec8148e7a1f # PQ
+     # - 9364dd386c9b4a1100dde8264690add7 # HLG
+     # - 08d6d8834ad9ec87b1dc7ec8148e7a1f # PQ
     assign_scores_to:
       - name: Maximum 4K/HDR
         score: -10000
       - name: Optimized 4k
         score: -10000
 
-  # Prefer DV+HDR
+  # Prefer HDR10+ Boost
 
   - trash_ids:
-      - c53085ddbd027d9624b320627748612f # DV HDR10+
+       - caa37d0df9c348912df1fb1d88f9273a # HDR10+ Boost
     assign_scores_to:
       - name: Maximum 4K/HDR
-        score: 1830
+        score: 150
       - name: Optimized 4k
-        score: 1830
+        score: 150
       - name: Optimized 1080p
         score: -10000
 
+  # Prefer DV Boost
   - trash_ids:
-      - e23edd2482476e595fb990b12e7c609c # DV HDR10
+       - b337d6812e06c200ec9a2d3cfa9d20a7 # DV Boost
     assign_scores_to:
       - name: Maximum 4K/HDR
-        score: 1810
+        score: 180
       - name: Optimized 4k
-        score: 1810
+        score: 180
       - name: Optimized 1080p
         score: -10000
 
-  # Prefer DV
+  #  HDR Catch All
   - trash_ids:
-      - 58d6a88f13e2db7f5059c41047876f00 # DV
-    assign_scores_to:
-      - name: Maximum 4K/HDR
-        score: 1805
-      - name: Optimized 4k
-        score: 1805
-      - name: Optimized 1080p
-        score: -10000
-
-  # DV / HDR
-  - trash_ids:
-      - dfb86d5941bc9075d6af23b09c2aeecd # HDR10
-      - b974a6cd08c1066250f1f177d7aa1225 # HDR10+          
-      - e61e28db95d22bedcadf030b8f156d96 # HDR
-      - 2a4d9069cc1fe3242ff9bdaebed239bb # HDR (undefined)
+      - 493b6d1dbec3c3364c59d7607f7e3405 # HDR Catch All
+      # - dfb86d5941bc9075d6af23b09c2aeecd # HDR10
+      # - b974a6cd08c1066250f1f177d7aa1225 # HDR10+          
+      # - e61e28db95d22bedcadf030b8f156d96 # HDR
+      # - 2a4d9069cc1fe3242ff9bdaebed239bb # HDR (undefined)
     assign_scores_to:
       - name: Maximum 4K/HDR
         score: 1500
